--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -1,55 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/video_player_holder"
+    android:id="@+id/layoutVideoPlayer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.alexvasilkov.gestures.GestureFrameLayout
-        android:id="@+id/video_surface_frame"
+        android:id="@+id/layoutVideoSurfaceFrame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextureView
-            android:id="@+id/video_surface"
+            android:id="@+id/videoSurface"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true" />
 
     </com.alexvasilkov.gestures.GestureFrameLayout>
 
     <com.loitp.ui.view.MediaSideScroll
-        android:id="@+id/video_volume_controller"
+        android:id="@+id/videoVolumeController"
         android:layout_width="@dimen/media_side_slider_width"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true" />
 
     <com.loitp.ui.view.MediaSideScroll
-        android:id="@+id/video_brightness_controller"
+        android:id="@+id/videoBrightnessController"
         android:layout_width="@dimen/media_side_slider_width"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivTopShadow"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_status_action_height"
         android:background="@drawable/gradient_background_flipped"
-        android:contentDescription="@null"/>
+        android:contentDescription="@null" />
 
-    <TextView
-        android:id="@+id/video_bottom_gradient"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivVideoBottomGradient"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignTop="@+id/video_time_holder"
         android:layout_alignParentBottom="true"
         android:background="@drawable/gradient_background"
-        tools:ignore="UnknownIdInLayout"/>
+        tools:ignore="UnknownIdInLayout" />
 
-    <include layout="@layout/bottom_video_time_holder"/>
+    <include layout="@layout/bottom_video_time_holder" />
 
-    <TextView
-        android:id="@+id/slide_info"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvSlideInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -63,6 +62,6 @@
         android:paddingRight="@dimen/activity_margin"
         android:paddingBottom="@dimen/medium_margin"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/extra_big_text_size"/>
+        android:textSize="@dimen/extra_big_text_size" />
 
 </RelativeLayout>
