--- a/app/src/main/res/layout/activity_widget_config.xml
+++ b/app/src/main/res/layout/activity_widget_config.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,13 +8,13 @@
     android:layout_margin="@dimen/activity_margin">
 
     <RelativeLayout
-        android:id="@+id/folder_picker_holder"
+        android:id="@+id/layoutFolderPicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_margin">
 
         <RelativeLayout
-            android:id="@+id/folder_picker_show_folder_name_holder"
+            android:id="@+id/layoutFolderPickerShowFolderName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
@@ -25,98 +24,99 @@
             android:paddingBottom="@dimen/activity_margin">
 
             <com.simplemobiletools.commons.views.MySwitchCompat
-                android:id="@+id/folder_picker_show_folder_name"
+                android:id="@+id/swFolderPickerShowFolderName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:clickable="false"
                 android:text="@string/show_folder_name"
-                app:switchPadding="@dimen/medium_margin"/>
+                app:switchPadding="@dimen/medium_margin" />
 
         </RelativeLayout>
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/folder_picker_label"
+            android:id="@+id/tvFolderPickerLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/folder_picker_show_folder_name_holder"
+            android:layout_below="@+id/layoutFolderPickerShowFolderName"
             android:layout_marginTop="@dimen/small_margin"
             android:layout_marginBottom="@dimen/normal_margin"
             android:paddingStart="@dimen/activity_margin"
-            android:text="@string/folder_on_widget"/>
+            android:paddingEnd="0dp"
+            android:text="@string/folder_on_widget" />
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/folder_picker_value"
+            android:id="@+id/tvFolderPickerValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/folder_picker_label"
+            android:layout_below="@+id/tvFolderPickerLabel"
             android:layout_marginStart="@dimen/activity_margin"
             android:background="@drawable/button_background"
             android:padding="@dimen/normal_margin"
-            tools:text="@string/internal"/>
+            tools:text="@string/internal" />
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/config_image_holder"
+        android:id="@+id/layoutConfigImage"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/folder_picker_holder">
+        android:layout_below="@+id/layoutFolderPicker">
 
         <com.loitp.ui.view.MySquareImageView
-            android:id="@+id/config_image"
+            android:id="@+id/ivConfig"
             android:layout_width="@dimen/widget_initial_size"
             android:layout_height="@dimen/widget_initial_size"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="@dimen/normal_margin"
             android:layout_marginTop="@dimen/normal_margin"
-            android:layout_marginRight="@dimen/normal_margin"/>
+            android:layout_marginRight="@dimen/normal_margin" />
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/config_folder_name"
+            android:id="@+id/tvConfigFolderName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/config_image"
+            android:layout_below="@+id/ivConfig"
             android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
             android:padding="@dimen/tiny_margin"
             android:textSize="@dimen/bigger_text_size"
-            tools:text="@string/internal"/>
+            tools:text="@string/internal" />
 
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/config_bg_color"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivConfigBgColor"
         android:layout_width="@dimen/widget_colorpicker_size"
         android:layout_height="@dimen/widget_colorpicker_size"
-        android:layout_above="@+id/config_save"/>
+        android:layout_above="@+id/btConfigSave" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignTop="@+id/config_bg_color"
-        android:layout_alignBottom="@+id/config_bg_color"
-        android:layout_toEndOf="@+id/config_bg_color"
+        android:layout_alignTop="@+id/ivConfigBgColor"
+        android:layout_alignBottom="@+id/ivConfigBgColor"
+        android:layout_toEndOf="@+id/ivConfigBgColor"
         android:background="@android:color/white">
 
         <SeekBar
-            android:id="@+id/config_bg_seekbar"
+            android:id="@+id/sbConfigBg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:paddingLeft="@dimen/activity_margin"
-            android:paddingRight="@dimen/activity_margin"/>
+            android:paddingRight="@dimen/activity_margin" />
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/config_text_color"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivConfigTextColor"
         android:layout_width="@dimen/widget_colorpicker_size"
         android:layout_height="@dimen/widget_colorpicker_size"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true" />
 
     <Button
-        android:id="@+id/config_save"
+        android:id="@+id/btConfigSave"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/widget_colorpicker_size"
         android:layout_alignParentEnd="true"
@@ -126,6 +126,7 @@
         android:paddingRight="@dimen/activity_margin"
         android:text="@string/ok"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/big_text_size"/>
+        android:textSize="@dimen/big_text_size"
+        tools:ignore="RelativeOverlap" />
 
 </RelativeLayout>
