--- a/app/src/main/res/layout/bottom_editor_crop_rotate_actions.xml
+++ b/app/src/main/res/layout/bottom_editor_crop_rotate_actions.xml
@@ -7,7 +7,7 @@
     android:layout_alignParentBottom="true">
 
     <ImageView
-        android:id="@+id/bottom_rotate"
+        android:id="@+id/ivBottomRotate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -15,13 +15,13 @@
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_rotate_right_vector"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_resize"
+        app:layout_constraintEnd_toStartOf="@+id/ivBottomResize"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
-        android:id="@+id/bottom_resize"
+        android:id="@+id/ivBottomResize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -31,7 +31,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bottom_aspect_ratio"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_rotate"
+        app:layout_constraintStart_toEndOf="@+id/ivBottomRotate"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
@@ -45,7 +45,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bottom_flip_horizontally"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_resize"
+        app:layout_constraintStart_toEndOf="@+id/ivBottomResize"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
