--- a/app/src/main/res/layout/pager_photo_item.xml
+++ b/app/src/main/res/layout/pager_photo_item.xml
@@ -62,7 +62,7 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:id="@+id/slide_info"
+        android:id="@+id/tvSlideInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
