--- a/app/src/main/res/layout/pager_video_item.xml
+++ b/app/src/main/res/layout/pager_video_item.xml
@@ -11,12 +11,12 @@
         android:layout_height="match_parent" />
 
     <com.alexvasilkov.gestures.GestureFrameLayout
-        android:id="@+id/video_surface_frame"
+        android:id="@+id/layoutVideoSurfaceFrame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextureView
-            android:id="@+id/video_surface"
+            android:id="@+id/videoSurface"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" />
@@ -24,13 +24,13 @@
     </com.alexvasilkov.gestures.GestureFrameLayout>
 
     <com.loitp.ui.view.MediaSideScroll
-        android:id="@+id/video_volume_controller"
+        android:id="@+id/videoVolumeController"
         android:layout_width="@dimen/media_side_slider_width"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true" />
 
     <com.loitp.ui.view.MediaSideScroll
-        android:id="@+id/video_brightness_controller"
+        android:id="@+id/videoBrightnessController"
         android:layout_width="@dimen/media_side_slider_width"
         android:layout_height="match_parent" />
 
@@ -68,7 +68,7 @@
     <include layout="@layout/bottom_video_time_holder" />
 
     <TextView
-        android:id="@+id/slide_info"
+        android:id="@+id/tvSlideInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
