--- a/app/src/main/res/layout/bottom_editor_primary_actions.xml
+++ b/app/src/main/res/layout/bottom_editor_primary_actions.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bottom_actions_height"
     android:layout_alignParentBottom="true">
 
-    <ImageView
-        android:id="@+id/bottom_primary_filter"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomPrimaryFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -15,24 +14,24 @@
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_photo_filter_vector"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_primary_crop_rotate"
+        app:layout_constraintEnd_toStartOf="@+id/ivBottomPrimaryCropRotate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/bottom_primary_crop_rotate"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomPrimaryCropRotate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_crop_rotate_vector"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_primary_draw"
-        app:layout_constraintStart_toEndOf="@+id/bottom_primary_filter"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@+id/ivBottomPrimaryDraw"
+        app:layout_constraintStart_toEndOf="@+id/ivBottomPrimaryFilter"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/bottom_primary_draw"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomPrimaryDraw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -40,7 +39,7 @@
         android:src="@drawable/ic_draw_vector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bottom_primary_crop_rotate"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toEndOf="@+id/ivBottomPrimaryCropRotate"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
