--- a/app/src/main/res/layout/bottom_actions_aspect_ratio.xml
+++ b/app/src/main/res/layout/bottom_actions_aspect_ratio.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bottom_actions_height"
     android:paddingTop="@dimen/medium_margin">
 
-    <TextView
-        android:id="@+id/bottom_aspect_ratio_free"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvBottomAspectRatioFree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -17,62 +16,62 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/big_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_aspect_ratio_one_one"
+        app:layout_constraintEnd_toStartOf="@+id/tvBottomAspectRatioOneOne"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/bottom_aspect_ratio_one_one"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvBottomAspectRatioOneOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/activity_margin"
-        android:text="1:1"
+        android:text="@string/_1_1"
         android:textColor="@android:color/white"
         android:textSize="@dimen/big_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_aspect_ratio_four_three"
+        app:layout_constraintEnd_toStartOf="@+id/tvBottomAspectRatioFourThree"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_aspect_ratio_free"
+        app:layout_constraintStart_toEndOf="@+id/tvBottomAspectRatioFree"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/bottom_aspect_ratio_four_three"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvBottomAspectRatioFourThree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/activity_margin"
-        android:text="4:3"
+        android:text="@string/_4_3"
         android:textColor="@android:color/white"
         android:textSize="@dimen/big_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_aspect_ratio_sixteen_nine"
+        app:layout_constraintEnd_toStartOf="@+id/tvBottomAspectRatioSixteenNine"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_aspect_ratio_one_one"
+        app:layout_constraintStart_toEndOf="@+id/tvBottomAspectRatioOneOne"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/bottom_aspect_ratio_sixteen_nine"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvBottomAspectRatioSixteenNine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/activity_margin"
-        android:text="16:9"
+        android:text="@string/_16_9"
         android:textColor="@android:color/white"
         android:textSize="@dimen/big_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_aspect_ratio_other"
+        app:layout_constraintEnd_toStartOf="@+id/tvBottomAspectRatioOther"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_aspect_ratio_four_three"
+        app:layout_constraintStart_toEndOf="@+id/tvBottomAspectRatioFourThree"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/bottom_aspect_ratio_other"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvBottomAspectRatioOther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -84,8 +83,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_aspect_ratio_sixteen_nine"
+        app:layout_constraintStart_toEndOf="@+id/tvBottomAspectRatioSixteenNine"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
