--- a/app/src/main/res/layout/bottom_editor_actions_filter.xml
+++ b/app/src/main/res/layout/bottom_editor_actions_filter.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bottom_filters_height"
     android:paddingTop="@dimen/medium_margin">
 
     <com.simplemobiletools.commons.views.MyRecyclerView
-        android:id="@+id/bottom_actions_filter_list"
+        android:id="@+id/rvBottomActionsFilter"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottom_filters_height"
         android:background="@color/crop_image_view_background"
         android:orientation="horizontal"
         android:overScrollMode="never"
-        app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"/>
+        app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" />
 
 </RelativeLayout>
