--- a/app/src/main/res/layout/bottom_editor_crop_rotate_actions.xml
+++ b/app/src/main/res/layout/bottom_editor_crop_rotate_actions.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bottom_actions_height"
     android:layout_alignParentBottom="true">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivBottomRotate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,9 +17,9 @@
         app:layout_constraintEnd_toStartOf="@+id/ivBottomResize"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivBottomResize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,13 +28,13 @@
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_minimize"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_aspect_ratio"
+        app:layout_constraintEnd_toStartOf="@+id/ivBottomAspectRatio"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ivBottomRotate"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/bottom_aspect_ratio"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomAspectRatio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -43,13 +42,13 @@
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_aspect_ratio_vector"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_flip_horizontally"
+        app:layout_constraintEnd_toStartOf="@+id/ivBottomFlipHorizontally"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ivBottomResize"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/bottom_flip_horizontally"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomFlipHorizontally"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -57,13 +56,13 @@
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_flip_horizontally_vector"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/bottom_flip_vertically"
+        app:layout_constraintEnd_toStartOf="@+id/ivBottomFlipVertically"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_aspect_ratio"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toEndOf="@+id/ivBottomAspectRatio"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/bottom_flip_vertically"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomFlipVertically"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
@@ -73,7 +72,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bottom_flip_horizontally"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toEndOf="@+id/ivBottomFlipHorizontally"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
