--- a/app/src/main/res/layout/bottom_editor_draw_actions.xml
+++ b/app/src/main/res/layout/bottom_editor_draw_actions.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bottom_actions_height"
     android:layout_alignParentBottom="true">
 
     <com.simplemobiletools.commons.views.MySeekBar
-        android:id="@+id/bottom_draw_width"
+        android:id="@+id/sbBottomDrawWidth"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="@dimen/activity_margin"
         android:layout_marginRight="@dimen/activity_margin"
         android:max="100"
         android:progress="50"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_draw_color"
+        app:layout_constraintBottom_toBottomOf="@id/ivBottomDrawColor"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/bottom_draw_color"
-        app:layout_constraintTop_toTopOf="@+id/bottom_draw_color"/>
+        app:layout_constraintRight_toLeftOf="@+id/ivBottomDrawColor"
+        app:layout_constraintTop_toTopOf="@+id/ivBottomDrawColor" />
 
-    <ImageView
-        android:id="@+id/bottom_draw_color_clickable"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomDrawColorClickable"
         android:layout_width="@dimen/bottom_editor_color_picker_size"
         android:layout_height="@dimen/bottom_editor_color_picker_size"
         android:layout_marginEnd="@dimen/small_margin"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/change_color"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/bottom_draw_undo"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintRight_toLeftOf="@+id/ivBottomDrawUndo"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/bottom_draw_color"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomDrawColor"
         android:layout_width="@dimen/bottom_editor_color_picker_size"
         android:layout_height="@dimen/bottom_editor_color_picker_size"
         android:layout_marginEnd="@dimen/small_margin"
@@ -40,11 +39,11 @@
         android:padding="@dimen/small_margin"
         android:src="@drawable/circle_background"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/bottom_draw_undo"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintRight_toLeftOf="@+id/ivBottomDrawUndo"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/bottom_draw_undo"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivBottomDrawUndo"
         android:layout_width="@dimen/bottom_editor_color_picker_size"
         android:layout_height="@dimen/bottom_editor_color_picker_size"
         android:layout_marginEnd="@dimen/normal_margin"
@@ -55,6 +54,6 @@
         android:src="@drawable/ic_undo_vector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
