--- a/app/src/main/res/layout/bottom_video_time_holder.xml
+++ b/app/src/main/res/layout/bottom_video_time_holder.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/video_time_holder"
+    android:id="@+id/layoutVideoTime"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true">
 
-    <ImageView
-        android:id="@+id/video_prev_file"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivVideoPrevFile"
         android:layout_width="@dimen/video_player_play_pause_size"
         android:layout_height="@dimen/video_player_play_pause_size"
         android:layout_alignParentStart="true"
@@ -17,10 +16,10 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_prev_outline_vector"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
-    <ImageView
-        android:id="@+id/video_toggle_play_pause"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivVideoTogglePlayPause"
         android:layout_width="@dimen/video_player_play_pause_size"
         android:layout_height="@dimen/video_player_play_pause_size"
         android:layout_centerHorizontal="true"
@@ -28,10 +27,10 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/small_margin"
         android:src="@drawable/ic_pause_outline_vector"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
-    <ImageView
-        android:id="@+id/video_next_file"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivVideoNextFile"
         android:layout_width="@dimen/video_player_play_pause_size"
         android:layout_height="@dimen/video_player_play_pause_size"
         android:layout_alignParentEnd="true"
@@ -40,46 +39,46 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/normal_margin"
         android:src="@drawable/ic_next_outline_vector"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/video_curr_time"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvVideoCurrTime"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@+id/video_toggle_play_pause"
-        android:layout_alignTop="@+id/video_seekbar"
-        android:layout_alignBottom="@+id/video_seekbar"
+        android:layout_below="@+id/ivVideoTogglePlayPause"
+        android:layout_alignTop="@+id/sbVideo"
+        android:layout_alignBottom="@+id/sbVideo"
         android:layout_alignParentStart="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/activity_margin"
         android:paddingRight="@dimen/activity_margin"
         android:textColor="@android:color/white"
-        tools:text="00:00"/>
+        tools:text="00:00" />
 
     <com.simplemobiletools.commons.views.MySeekBar
-        android:id="@+id/video_seekbar"
+        android:id="@+id/sbVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/video_toggle_play_pause"
-        android:layout_toStartOf="@+id/video_duration"
-        android:layout_toEndOf="@+id/video_curr_time"
+        android:layout_below="@+id/ivVideoTogglePlayPause"
+        android:layout_toStartOf="@+id/tvVideoDuration"
+        android:layout_toEndOf="@+id/tvVideoCurrTime"
         android:paddingTop="@dimen/activity_margin"
-        android:paddingBottom="@dimen/activity_margin"/>
+        android:paddingBottom="@dimen/activity_margin" />
 
-    <TextView
-        android:id="@+id/video_duration"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvVideoDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/video_toggle_play_pause"
-        android:layout_alignTop="@+id/video_seekbar"
-        android:layout_alignBottom="@+id/video_seekbar"
+        android:layout_below="@+id/ivVideoTogglePlayPause"
+        android:layout_alignTop="@+id/sbVideo"
+        android:layout_alignBottom="@+id/sbVideo"
         android:layout_alignParentEnd="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/activity_margin"
         android:paddingRight="@dimen/activity_margin"
         android:textColor="@android:color/white"
-        tools:text="00:00"/>
+        tools:text="00:00" />
 
 </RelativeLayout>
