--- a/app/src/main/res/layout/video_item_grid.xml
+++ b/app/src/main/res/layout/video_item_grid.xml
@@ -23,7 +23,7 @@
         android:visibility="gone" />
 
     <TextView
-        android:id="@+id/video_duration"
+        android:id="@+id/tvVideoDuration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
