--- a/app/src/main/res/layout/dialog_change_view_type.xml
+++ b/app/src/main/res/layout/dialog_change_view_type.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,46 +12,46 @@
         android:paddingRight="@dimen/activity_margin">
 
         <RadioGroup
-            android:id="@+id/change_view_type_dialog_radio"
+            android:id="@+id/rgChangeViewTypeDialogRadio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/medium_margin">
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/change_view_type_dialog_radio_grid"
+                android:id="@+id/rbChangeViewTypeDialogRadioGrid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/medium_margin"
                 android:paddingBottom="@dimen/medium_margin"
-                android:text="@string/grid"/>
+                android:text="@string/grid" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/change_view_type_dialog_radio_list"
+                android:id="@+id/rbChangeViewTypeDialogRadioList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/medium_margin"
                 android:paddingBottom="@dimen/medium_margin"
-                android:text="@string/list"/>
+                android:text="@string/list" />
 
         </RadioGroup>
 
-        <include layout="@layout/divider"/>
+        <include layout="@layout/divider" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/change_view_type_dialog_group_direct_subfolders"
+            android:id="@+id/cbChangeViewTypeDialogGroupDirectSubfolders"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/group_direct_subfolders"/>
+            android:text="@string/group_direct_subfolders" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/change_view_type_dialog_use_for_this_folder"
+            android:id="@+id/cbChangeViewTypeDialogUseForThisFolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/use_for_this_folder"/>
+            android:text="@string/use_for_this_folder" />
 
     </LinearLayout>
 </ScrollView>
