--- a/app/src/main/res/layout/dialog_confirm_delete_folder.xml
+++ b/app/src/main/res/layout/dialog_confirm_delete_folder.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/message"
+        android:id="@+id/tvMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/big_margin"
         android:paddingTop="@dimen/big_margin"
         android:paddingRight="@dimen/big_margin"
-        android:textSize="@dimen/bigger_text_size"/>
+        android:textSize="@dimen/bigger_text_size" />
 
-    <TextView
-        android:id="@+id/message_warning"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvMessageWarning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/message"
+        android:layout_below="@+id/tvMessage"
         android:paddingLeft="@dimen/big_margin"
         android:paddingTop="@dimen/big_margin"
         android:paddingRight="@dimen/big_margin"
         android:paddingBottom="@dimen/activity_margin"
         android:textColor="@color/md_red_700"
-        android:textSize="@dimen/bigger_text_size"/>
+        android:textSize="@dimen/bigger_text_size" />
 
 </RelativeLayout>
