--- a/app/src/main/res/layout/dialog_custom_aspect_ratio.xml
+++ b/app/src/main/res/layout/dialog_custom_aspect_ratio.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,52 +9,53 @@
     android:paddingRight="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/aspect_ratio_width_label"
+        android:id="@+id/tvAspectRatioWidthLabel"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="@string/width"/>
+        android:text="@string/width" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/aspect_ratio_width"
+        android:id="@+id/etAspectRatioWidth"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/aspect_ratio_width_label"
+        android:layout_below="@+id/tvAspectRatioWidthLabel"
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="number"
         android:maxLength="6"
         android:maxLines="1"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/aspect_ratio_width"
-        android:layout_alignBottom="@+id/aspect_ratio_width"
-        android:layout_toStartOf="@+id/aspect_ratio_height"
-        android:layout_toEndOf="@+id/aspect_ratio_width"
+        android:layout_alignTop="@+id/etAspectRatioWidth"
+        android:layout_alignBottom="@+id/etAspectRatioWidth"
+        android:layout_toStartOf="@+id/etAspectRatioHeight"
+        android:layout_toEndOf="@+id/etAspectRatioWidth"
         android:gravity="center"
         android:text=":"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        tools:ignore="HardcodedText" />
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/aspect_ratio_height_label"
+        android:id="@+id/tvAspectRatioHeightLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_toEndOf="@+id/aspect_ratio_width_label"
-        android:text="@string/height"/>
+        android:layout_toEndOf="@+id/tvAspectRatioWidthLabel"
+        android:text="@string/height" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/aspect_ratio_height"
+        android:id="@+id/etAspectRatioHeight"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/aspect_ratio_width_label"
-        android:layout_alignStart="@+id/aspect_ratio_height_label"
+        android:layout_below="@+id/tvAspectRatioWidthLabel"
+        android:layout_alignStart="@+id/tvAspectRatioHeightLabel"
         android:inputType="number"
         android:maxLength="6"
         android:maxLines="1"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
 </RelativeLayout>
