--- a/app/src/main/res/layout/dialog_directory_picker.xml
+++ b/app/src/main/res/layout/dialog_directory_picker.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,16 +15,17 @@
             android:layout_height="match_parent"
             android:scrollbars="none"
             app:layoutManager="com.simplemobiletools.commons.views.MyGridLayoutManager"
-            app:spanCount="@integer/directory_columns_vertical_scroll"/>
+            app:spanCount="@integer/directory_columns_vertical_scroll" />
 
         <com.simplemobiletools.commons.views.FastScroller
             android:id="@+id/fsDirectoriesVertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:paddingEnd="0dp"
             android:layout_alignParentEnd="true"
             android:paddingStart="@dimen/normal_margin">
 
-            <include layout="@layout/fastscroller_handle_vertical"/>
+            <include layout="@layout/fastscroller_handle_vertical" />
 
         </com.simplemobiletools.commons.views.FastScroller>
 
@@ -37,18 +37,18 @@
             android:layout_alignParentBottom="true"
             android:paddingTop="@dimen/normal_margin">
 
-            <include layout="@layout/fastscroller_handle_horizontal"/>
+            <include layout="@layout/fastscroller_handle_horizontal" />
 
         </com.simplemobiletools.commons.views.FastScroller>
     </RelativeLayout>
 
     <com.simplemobiletools.commons.views.MyFloatingActionButton
-        android:id="@+id/directories_show_hidden"
+        android:id="@+id/fabDirectoriesShowHidden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/activity_margin"
         android:src="@drawable/ic_unhide_vector"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
