--- a/app/src/main/res/layout/dialog_exclude_folder.xml
+++ b/app/src/main/res/layout/dialog_exclude_folder.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,18 +13,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/exclude_folder_description"
-            android:textSize="@dimen/bigger_text_size"/>
+            android:textSize="@dimen/bigger_text_size" />
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/exclude_folder_parent"
+            android:id="@+id/tvExcludeFolderParent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_margin"
             android:text="@string/exclude_folder_parent"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/normal_text_size" />
 
         <RadioGroup
-            android:id="@+id/exclude_folder_radio_group"
+            android:id="@+id/rgExcludeFolderRadioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
