--- a/app/src/main/res/layout/dialog_manage_bottom_actions.xml
+++ b/app/src/main/res/layout/dialog_manage_bottom_actions.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,124 +12,124 @@
         android:paddingRight="@dimen/activity_margin">
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_toggle_favorite"
+            android:id="@+id/cbManageBottomActionsToggleFavorite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/toggle_favorite"/>
+            android:text="@string/toggle_favorite" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_edit"
+            android:id="@+id/cbManageBottomActionsEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/edit"/>
+            android:text="@string/edit" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_share"
+            android:id="@+id/cbManageBottomActionsShare"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/share"/>
+            android:text="@string/share" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_delete"
+            android:id="@+id/cbManageBottomActionsDelete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/delete"/>
+            android:text="@string/delete" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_rotate"
+            android:id="@+id/cbManageBottomActionsRotate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/rotate"/>
+            android:text="@string/rotate" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_properties"
+            android:id="@+id/cbManageBottomActionsProperties"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/properties"/>
+            android:text="@string/properties" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_change_orientation"
+            android:id="@+id/cbManageBottomActionsChangeOrientation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/change_orientation"/>
+            android:text="@string/change_orientation" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_slideshow"
+            android:id="@+id/cbManageBottomActionsSlideshow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/slideshow"/>
+            android:text="@string/slideshow" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_show_on_map"
+            android:id="@+id/cbManageBottomActionsShowOnMap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/show_on_map"/>
+            android:text="@string/show_on_map" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_toggle_visibility"
+            android:id="@+id/cbManageBottomActionsToggleVisibility"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/toggle_file_visibility"/>
+            android:text="@string/toggle_file_visibility" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_rename"
+            android:id="@+id/cbManageBottomActionsRename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/rename"/>
+            android:text="@string/rename" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_set_as"
+            android:id="@+id/cbManageBottomActionsSetAs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/set_as"/>
+            android:text="@string/set_as" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_copy"
+            android:id="@+id/cbManageBottomActionsCopy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/copy"/>
+            android:text="@string/copy" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_move"
+            android:id="@+id/cbManageBottomActionsMove"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/move"/>
+            android:text="@string/move" />
 
         <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-            android:id="@+id/manage_bottom_actions_resize"
+            android:id="@+id/cbManageBottomActionsResize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/resize"/>
+            android:text="@string/resize" />
 
     </LinearLayout>
 </ScrollView>
